--- a/style.css
+++ b/style.css
@@ -29,5 +29,114 @@ body {
     gap: 32px;
 }
 
+.cabecalho-menu-text {
+    font-family: 'Sarala', sans-serif;
+    color: #fff2e7;
+    font-weight: 400;
+    font-size: 18px;
+}
+
+.corpo {
+    margin-bottom: 48px;
+    border-top: 0.4px solid #fff2e7;
+
+}
+
+.corpo-principal {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    
+}
+
+.corpo-principal-escrito {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+
+}
+
+.corpo-titulo {
+    font-family: 'Righteous', cursive;
+    font-weight: 400;
+    font-size: 64px;
+    color: #fff2e7;
+}
+
+.corpo-sub-titulo {
+    font-family: 'Sarala', sans-serif;
+    color: #ECD6C4;
+    font-weight: 400;
+    font-size: 24px;
+}
+
+.corpo-button {
+  background-color: #ECD6C4;
+  width: 180px;
+  height: 60px;
+  border: none;
+  box-shadow: 4px 5px 4px rgba(0,  0, 0, 0.25);
+  border-radius: 20px;
+  font-family: 'Sarala', sans-serif;
+  color: #2f2325;
+  font-weight: 400;
+  font-size: 24px;
+  
+}
+
+.corpo-button:hover{
+    background-color: rgb(100, 149, 237);
+}
+
+.corpo-img {
+    width:  430px;
+    height: 430px;
+}
+
+.corpo-segundario {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+    margin-top: 48px;
+    
+}
+
+.corpo-text-titulo {
+    border-top: 0.4px solid #fff2e7;
+    padding: 46px;
+    font-family: 'Righteous', cursive;
+    color: #ECD6C4;
+    font-weight: 400;
+    font-size: 24px;
+    margin-bottom: 16px;
+} 
+
+.corpo-tex {
+    font-family: 'Sarala', sans-serif;
+    color: #ECD6C4;
+    font-weight: 300;
+    font-size: 18px;
+}
+
+.rodape {
+    padding: 32px;
+    border-top: 0.4px solid #fff2e7;
+}
+
+.rodape-tex {
+    height: 60px;
+    display: block;
+    margin: auto;
+}
+
+
+
+
+
+
+
+
     
 
